--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
     "sonner": "^2.0.5",
+    "swiper": "^11.2.8",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.64"
   },
