--- a/client/package.json
+++ b/client/package.json
@@ -26,11 +26,14 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@reduxjs/toolkit": "^2.8.2",
+    "add": "^2.0.6",
+    "avatar": "^0.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
+    "dropdown-menu": "^0.1.1",
     "filepond": "^4.32.8",
     "filepond-plugin-image-exif-orientation": "^1.0.11",
     "filepond-plugin-image-preview": "^4.6.12",
@@ -47,6 +50,7 @@
     "react-hook-form": "^7.57.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
+    "shadcn": "^2.7.0",
     "sonner": "^2.0.5",
     "swiper": "^11.2.8",
     "tailwind-merge": "^3.3.1",
