--- a/client/package.json
+++ b/client/package.json
@@ -46,6 +46,7 @@
     "filepond-plugin-image-exif-orientation": "^1.0.11",
     "filepond-plugin-image-preview": "^4.6.12",
     "framer-motion": "^12.18.1",
+    "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.515.0",
@@ -56,6 +57,7 @@
     "react-dom": "^19.0.0",
     "react-filepond": "^7.1.3",
     "react-hook-form": "^7.57.0",
+    "react-leaflet": "^5.0.0-rc.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
     "recharts": "^3.0.2",
@@ -69,6 +71,8 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/leaflet": "^1.9.20",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^20.19.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
