--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,7 @@
     "dotenv": "^16.5.0",
     "dropdown-menu": "^0.1.1",
     "filepond": "^4.32.8",
+    "filepond-plugin-file-validate-type": "^1.2.9",
     "filepond-plugin-image-exif-orientation": "^1.0.11",
     "filepond-plugin-image-preview": "^4.6.12",
     "framer-motion": "^12.18.1",
