--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.832.0",
     "@aws-sdk/lib-storage": "^3.832.0",
-    "@prisma/client": "^6.10.1",
+    "@prisma/client": "^6.14.0",
     "@terraformer/wkt": "^2.2.1",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
@@ -34,8 +34,10 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.3",
     "prisma": "^6.10.1",
+    "stripe": "^18.4.0",
     "uuid": "^11.1.0",
     "zod": "^3.25.67"
   },
@@ -46,7 +48,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/multer": "^1.4.13",
-    "@types/node": "^24.0.3",
+    "@types/node": "^24.3.0",
     "@types/nodemailer": "^6.4.17",
     "@types/terraformer__wkt": "^2.0.3",
     "@types/uuid": "^10.0.0",
