--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npm run build && concurrently \"npx tsc -w\" \"nodemon --exec ts-node  src/server.ts\"",
-    "build": "rimraf dist && npx tsc",
-    "start": "npm run build && node dist/server.js",
+    "dev": "concurrently \"npx tsc -w\" \"nodemon --exec ts-node src/server.ts\"",
+    "build": "rimraf dist && tsc",
+    "start": "node dist/server.js",
     "seed": "ts-node prisma/seed.ts",
     "prisma:generate": "prisma generate",
     "postprisma:generate": "shx cp -r node_modules/.prisma/client/index.d.ts ../client/src/types/prismaTypes.d.ts"
