--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "concurrently \"npx tsc -w\" \"nodemon --exec ts-node src/server.ts\"",
-    "build": "rimraf dist && prisma generate && prisma migrate deploy && tsc",
+    "build": "rimraf dist && prisma generate && tsc",
     "start": "node dist/src/server.js",
+    "postdeploy": "prisma migrate deploy",
     "postinstall": "prisma generate",
     "prisma:generate": "prisma generate",
     "postprisma:generate": "shx cp -r node_modules/.prisma/client/index.d.ts ../client/src/types/prismaTypes.d.ts"
