--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"npx tsc -w\" \"nodemon --exec ts-node src/server.ts\"",
-    "build": "rimraf dist && prisma generate && tsc",
-    "start": "node dist/src/server.js",
-    "postdeploy": "prisma migrate deploy",
-    "postinstall": "prisma generate",
+    "dev": "npm run build && concurrently \"npx tsc -w\" \"nodemon --exec ts-node  src/server.ts\"",
+    "build": "rimraf dist && npx tsc",
+    "start": "npm run build && node dist/index.js",
+    "seed": "ts-node prisma/seed.ts",
     "prisma:generate": "prisma generate",
     "postprisma:generate": "shx cp -r node_modules/.prisma/client/index.d.ts ../client/src/types/prismaTypes.d.ts"
   },
@@ -53,10 +52,8 @@
     "@types/multer": "^1.4.13",
     "@types/node": "^24.3.0",
     "@types/nodemailer": "^6.4.17",
-    "@types/swagger-ui-express": "^4.1.8",
     "@types/terraformer__wkt": "^2.0.3",
     "@types/uuid": "^10.0.0",
-    "@types/yamljs": "^0.2.34",
     "concurrently": "^9.1.2",
     "nodemon": "^3.1.10",
     "rimraf": "^6.0.1",
