--- a/server/package.json
+++ b/server/package.json
@@ -52,8 +52,10 @@
     "@types/multer": "^1.4.13",
     "@types/node": "^24.3.0",
     "@types/nodemailer": "^6.4.17",
+    "@types/swagger-ui-express": "^4.1.8",
     "@types/terraformer__wkt": "^2.0.3",
     "@types/uuid": "^10.0.0",
+    "@types/yamljs": "^0.2.34",
     "concurrently": "^9.1.2",
     "nodemon": "^3.1.10",
     "rimraf": "^6.0.1",
