--- a/server/package.json
+++ b/server/package.json
@@ -10,10 +10,12 @@
     "postbuild": "prisma generate && prisma db push",
     "db:push": "prisma db push",
     "db:seed": "prisma db seed",
-    "seed": "ts-node prisma/seed.ts",
     "prisma:generate": "prisma generate",
     "prisma:studio": "prisma studio",
     "postprisma:generate": "shx cp -r node_modules/.prisma/client/index.d.ts ../client/src/types/prismaTypes.d.ts"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   },
   "author": "",
   "license": "ISC",
@@ -54,7 +56,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/multer": "^1.4.13",
-    "@types/node": "^24.3.0",
+    "@types/node": "^24.3.1",
     "@types/nodemailer": "^6.4.17",
     "@types/swagger-ui-express": "^4.1.8",
     "@types/terraformer__wkt": "^2.0.3",
