--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npm run build && concurrently \"npx tsc -w\" \"nodemon --exec ts-node src/server.ts\"",
-    "build": "npx rimraf dist && npx tsc",
+    "build": "rimraf dist && npx tsc",
     "start": "npm run build && node ./dist/server.js",
     "postbuild": "prisma generate && prisma db push",
     "db:push": "prisma db push",
@@ -43,6 +43,7 @@
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.3",
     "prisma": "^6.10.1",
+    "rimraf": "^6.0.1",
     "stripe": "^18.4.0",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0",
