--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npm run build && concurrently \"npx tsc -w\" \"nodemon --exec ts-node src/server.ts\"",
-    "build": "rimraf dist && npx tsc",
+    "build": "rm -rf dist && npx tsc",
     "start": "npm run build && node ./dist/server.js",
     "postbuild": "prisma generate && prisma db push",
     "db:push": "prisma db push",
