--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npm run build && concurrently \"npx tsc -w\" \"nodemon --exec ts-node src/server.ts\"",
-    "build": "npm install typescript && rm -rf dist && npx tsc",
+    "build": "rimraf dist && npx tsc",
     "start": "npm run build && node ./dist/server.js",
     "postbuild": "prisma generate && prisma db push",
     "db:push": "prisma db push",
@@ -51,16 +51,14 @@
     "zod": "^3.25.67"
   },
   "devDependencies": {
-    "@types/body-parser": "^1.19.6",
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
     "@types/helmet": "^0.0.48",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/multer": "^1.4.13",
     "@types/node": "^24.3.1",
-    "@types/nodemailer": "^6.4.20",
+    "@types/nodemailer": "^6.4.17",
     "@types/swagger-ui-express": "^4.1.8",
     "@types/terraformer__wkt": "^2.0.3",
     "@types/uuid": "^10.0.0",
@@ -69,6 +67,6 @@
     "nodemon": "^3.1.10",
     "shx": "^0.4.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.8.3"
   }
 }
