--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npm run build && concurrently \"npx tsc -w\" \"nodemon --exec ts-node src/server.ts\"",
+    "dev": "nodemon --exec ts-node src/server.ts",
     "build": "rimraf dist && npx tsc",
-    "start": "npm run build && node ./dist/server.js",
+    "start": "node dist/server.js",
     "postbuild": "prisma generate && prisma db push",
     "db:push": "prisma db push",
     "db:seed": "prisma db seed",
